Fix error page overflow

--- a/wp-content/themes/academyAfrica/assets/css/src/widgets/error.scss
+++ b/wp-content/themes/academyAfrica/assets/css/src/widgets/error.scss
@@ -19,7 +19,7 @@ $large-screen: 1024px;
   background-size: 100% 100%;
   background-position: center;
   min-height: 700px;
-  width: 100vw;
+  // width: 100vw;
 
   @include respond-to($small-screen) {
     background-size: cover;
